css/VideoPlayer.css
.fl-videoPlayer {
    font-family: sans-serif;
    height: 22.5em;
}

:-moz-full-screen .fl-videoPlayer-main {
    height: 100%;
    width: 100%;
    padding-bottom: 2em;
}

:-moz-full-screen .fl-videoPlayer-video-element, :-moz-full-screen .fl-videoPlayer-overlay {
    width: auto;
}
:-moz-full-screen .fl-videoPlayer-transcriptArea {
    width: 20%;
    max-width: 25em;
    float: left;
}

:-webkit-full-screen.fl-videoPlayer-main {
    height: 100%;
    width: auto;
}
:-webkit-full-screen .fl-videoPlayer-container,
:-webkit-full-screen .fl-videoPlayer-video-element {
    width: inherit;
    height: inherit;
}
:-webkit-full-screen .fl-videoPlayer-video-element {
    float: right;
}
:-webkit-full-screen .fl-videoPlayer-overlay {
    width: 100%;
    float: left;
}
:-webkit-full-screen .fl-videoPlayer-transcriptArea {
    width: 20%;
    max-width: 25em;
}

/*
* Video player main container
*/

.fl-videoPlayer-main {
    position: relative;
    display: inline-block;
    height: inherit;
}

/*
* Video area
*/

.fl-videoPlayer-video {
    float: left;
    height: inherit;
}

.fl-videoPlayer-video-element {
    top: 0;
    left: 0;
    height: inherit;
    width: 29.75em;
}

.fl-videoPlayer-video-element:focus,
.fl-videoPlayer-transcript-element-selected {
    outline: solid 3px #3195C7;
}
.fl-theme-uio-yb .fl-videoPlayer-video-element:focus { outline-color: #FFFF00; }
.fl-theme-uio-wb .fl-videoPlayer-video-element:focus { outline-color: #FFFFFF; }
.fl-theme-uio-by .fl-videoPlayer-video-element:focus,
.fl-theme-uio-bw .fl-videoPlayer-video-element:focus { outline-color: #000000; }

/*
 * Controller area
 */
 
.fl-videoPlayer-tooltip {
    position    : absolute;
    padding     : 3px 5px;
    z-index     : 1000; /* Tooltips should be always shown above any other videoPlayer html element */
}
.fl-theme-uio-yb .fl-videoPlayer-tooltip,
.fl-theme-uio-by .fl-videoPlayer-tooltip,
.fl-theme-uio-wb .fl-videoPlayer-tooltip,
.fl-theme-uio-bw .fl-videoPlayer-tooltip { background: none; }

.fl-videoPlayer-controller {
    width:100%;
    position: relative;
    pointer-events: all;
    background-color: rgba(242, 242, 242, 0.75);
    height: 2.05em;
    box-shadow: inset 0 0 0.5em rgba(0, 0, 0, 0.15);
    padding-bottom: 1px; /* For Safari and Chrome. Without padding, button overlaps container border */
}


/***********
 * Buttons *
 ***********/

.fl-videoPlayer-button {
    width: 2em;
    height: 2em;
    border: 0;
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0);
    font-size: 1em;
}
.fl-videoPlayer-button:focus {
    background-color: #3195C7;
}
.fl-theme-uio-yb .fl-videoPlayer-button:focus { background-color: #FFFF00 !important; }
.fl-theme-uio-wb .fl-videoPlayer-button:focus { background-color: #FFFFFF !important; }
.fl-theme-uio-by .fl-videoPlayer-button:focus,
.fl-theme-uio-bw .fl-videoPlayer-button:focus { background-color: #000000 !important; }

.fl-videoPlayer-controller .fl-videoPlayer-button,
.fl-videoPlayer-controller .fl-videoPlayer-button:hover {
    background-size: cover;
    background-repeat: no-repeat;
}

.fl-videoPlayer-controller .fl-videoPlayer-button:hover {
    background-color: rgba(153, 153, 153, 0.45);
    box-shadow: inset 0 0 0.25em rgba(0, 0, 0, 0.30);
}

.fl-theme-uio-by .fl-videoPlayer-controller,
.fl-theme-uio-bw .fl-videoPlayer-controller { box-shadow: none !important; }

.fl-videoPlayer-controller * {
    display: inline-block;
}

.fl-videoPlayer-optional {
    display: none;
}
.fl-videoPlayer-fullscreen.fl-videoPlayer-optional,
.fl-videoPlayer-fullscreen-on.fl-videoPlayer-optional {
    display: inline;
}

.fl-videoPlayer-controller-buttons-main,
.fl-videoPlayer-controller-buttons-secondary {
    height: inherit;
}
.fl-videoPlayer-controller-buttons-main {
    float: left;
}
.fl-videoPlayer-controller-buttons-secondary {
    float: right;
}
a.fl-videoPlayer-button-wrapper {
    text-decoration: none;
}

/* Play button */
.fl-videoPlayer-play {
    background-image: url('../images/default/play.png');
}

.fl-videoPlayer-play:hover {
    background-image: url('../images/default/play_hover.png');
}
.fl-videoPlayer-play:focus {
    background-image: url('../images/white/play.png');
}
.fl-theme-uio-yb .fl-videoPlayer-play:focus,
.fl-theme-uio-wb .fl-videoPlayer-play:focus { background-image: url('../images/black/play.png'); }
.fl-theme-uio-by .fl-videoPlayer-play:focus { background-image: url('../images/yellow/play.png'); }
.fl-theme-uio-bw .fl-videoPlayer-play:focus { background-image: url('../images/white/play.png'); }

.fl-videoPlayer-playing {
    background-image: url('../images/default/pause.png');
}

.fl-videoPlayer-playing:hover {
    background-image: url('../images/default/pause_hover.png');
}

.fl-videoPlayer-playing:focus {
    background-image: url('../images/white/pause.png');
}
.fl-theme-uio-yb .fl-videoPlayer-playing:focus,
.fl-theme-uio-wb .fl-videoPlayer-playing:focus { background-image: url('../images/black/pause.png'); }
.fl-theme-uio-by .fl-videoPlayer-playing:focus { background-image: url('../images/yellow/pause.png'); }
.fl-theme-uio-bw .fl-videoPlayer-playing:focus { background-image: url('../images/white/pause.png'); }

/* Fullscreen button */
.fl-videoPlayer-fullscreen {
    background-image: url('../images/default/fullscreen.png');
}

.fl-videoPlayer-fullscreen:hover {
    background-image: url('../images/default/fullscreen_hover.png');
}

.fl-videoPlayer-fullscreen:focus {
    background-image: url('../images/white/fullscreen.png');
}
.fl-theme-uio-yb .fl-videoPlayer-fullscreen:focus,
.fl-theme-uio-wb .fl-videoPlayer-fullscreen:focus { background-image: url('../images/black/fullscreen.png'); }
.fl-theme-uio-by .fl-videoPlayer-fullscreen:focus { background-image: url('../images/yellow/fullscreen.png'); }
.fl-theme-uio-bw .fl-videoPlayer-fullscreen:focus { background-image: url('../images/white/fullscreen.png'); }

.fl-videoPlayer-fullscreen-on {
    background-image: url('../images/default/smallscreen.png');
}
/* ... */

